deploy/4_ingress/0_hoshi-gateway.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hoshi-gateway
  namespace: hoshi-note
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.hoshi-note.ixk.me`)
      services:
        - name: hoshi-gateway
          namespace: hoshi-note
          port: 8000
