deploy/4_ingress/1_services.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: hoshi-note
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio.hoshi-note.ixk.me`)
      services:
        - name: minio
          namespace: hoshi-note
          port: 9001
