deploy/4_ingress/2_monitoring.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.hoshi-note.ixk.me`)
      services:
        - name: loki-grafana
          namespace: monitoring
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.hoshi-note.ixk.me`)
      services:
        - name: loki-prometheus-server
          namespace: monitoring
          port: 80
